force-app/main/default/objects/sked__Account_Resource_Score__c/sked__Account_Resource_Score__c.object-meta.xml
<CustomObject>
    <label>Account Resource Score</label>
    <nameField>
        <displayFormat>ARS-{0000}</displayFormat>
        <label>Account Resource Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Resource Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>