force-app/main/default/objects/sked__Account_Resource_Score__c/fields/sked__Account__c.field-meta.xml
<CustomField>
    <fullName>sked__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Resource Scores</relationshipLabel>
    <relationshipName>Account_Resource_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>