force-app/main/default/objects/sked__Account_Resource_Score__c/fields/sked_Account_Resource_Relationship__c.field-meta.xml
<CustomField>
    <fullName>sked_Account_Resource_Relationship__c</fullName>
    <label>Account Resource Relationship</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>